[package]
name = "cargo-outofdate"
version = "0.3.0"
authors = ["quininer kel <quininer@live.com>"]
license = "MIT"
description = "Check outdated cargo dependencies"
repository = "https://github.com/quininer/cargo-outofdate"
homepage = "https://github.com/quininer/cargo-outofdate"
readme = "README.md"
keywords = ["cargo", "dependencies", "cargo-subcommand"]
categories = ["command-line-utilities", "development-tools"]
edition = "2018"

[dependencies]
anyhow = "1"
argh = "0.1"
cargo = { version = "0.78", default-features = false }
semver = "1"
tabwriter = "1.0"

[profile.release]
lto = true
